Ajustes Match Netbeans
Ajustes Match Netbeans

--- a/WebContent/WEB-INF/layoutmenu.xhtml
+++ b/WebContent/WEB-INF/layoutmenu.xhtml
@@ -24,24 +24,24 @@
         <div class="Separator"></div>
         
         <pr:menu>
-            <p:menuitem id="rm_dashboard" value="Dashboard" icon="icon-planet29" outcome="service"/>
+            <p:menuitem id="rm_dashboard" value="Dashboard" icon="icon-planet29" outcome="createservice"/>
             <p:submenu id="rm_theme" label="QA-Box - SOA Inventory" icon="icon-mountains14">
-                <p:menuitem id="rm_sample" value="Sample Page" icon="fa fa-columns" outcome="service" />
-                <p:menuitem id="rm_forms" value="Form Elements" icon="icon-browser" outcome="service" />
-                <p:menuitem id="rm_data" value="Data Components" icon="icon-calendar" outcome="service" />
-                <p:menuitem id="rm_datatable" value="DataTable" icon="icon-grid-alt" outcome="service" />
-                <p:menuitem id="rm_panels" value="Panels" icon="icon-screen47 Fs16" outcome="service" />
-                <p:menuitem id="rm_overlays" value="Overlays" icon="icon-windows-1" outcome="service" />
-                <p:menuitem id="rm_menus" value="Menus" icon="icon-link60 Fs16" outcome="service" />
-                <p:menuitem id="rm_messages" value="Messages" icon="icon-notifications1 Fs16" outcome="service" />
-                <p:menuitem id="rm_fileupload" value="FileUpload" icon="icon-task" outcome="service" />
-                <p:menuitem id="rm_misc" value="Misc" icon="icon-nfc1" outcome="service" />
+                <p:menuitem id="rm_sample" value="Sample Page" icon="fa fa-columns" outcome="createservice" />
+                <p:menuitem id="rm_forms" value="Form Elements" icon="icon-browser" outcome="createservice" />
+                <p:menuitem id="rm_data" value="Data Components" icon="icon-calendar" outcome="createservice" />
+                <p:menuitem id="rm_datatable" value="DataTable" icon="icon-grid-alt" outcome="createservice" />
+                <p:menuitem id="rm_panels" value="Panels" icon="icon-screen47 Fs16" outcome="createservice" />
+                <p:menuitem id="rm_overlays" value="Overlays" icon="icon-windows-1" outcome="createservice" />
+                <p:menuitem id="rm_menus" value="Menus" icon="icon-link60 Fs16" outcome="createservice" />
+                <p:menuitem id="rm_messages" value="Messages" icon="icon-notifications1 Fs16" outcome="createservice" />
+                <p:menuitem id="rm_fileupload" value="FileUpload" icon="icon-task" outcome="createservice" />
+                <p:menuitem id="rm_misc" value="Misc" icon="icon-nfc1" outcome="createservice" />
             </p:submenu>
             <p:submenu id="rm_default" label="Default Pages" icon="icon-copy31">
-                <p:menuitem id="rm_empty" value="Empty Page" icon="icon-ipad" outcome="service" />
-                <p:menuitem id="rm_login" value="Login Page" icon="icon-in-alt" outcome="service" />
-                <p:menuitem id="rm_error" value="Error Page" icon="icon-close" outcome="service" />
-                <p:menuitem id="rm_404" value="404 Page" icon="icon-close" outcome="service" />
+                <p:menuitem id="rm_empty" value="Empty Page" icon="icon-ipad" outcome="createservice" />
+                <p:menuitem id="rm_login" value="Login Page" icon="icon-in-alt" outcome="createservice" />
+                <p:menuitem id="rm_error" value="Error Page" icon="icon-close" outcome="createservice" />
+                <p:menuitem id="rm_404" value="404 Page" icon="icon-close" outcome="createservice" />
                 <p:menuitem id="rm_access" value="Access Denied Page" icon="icon-turn17" outcome="/error" />
             </p:submenu>
             <p:submenu id="rm_hierarchy" label="Menu Hierarchy" icon="icon-share39">
@@ -64,39 +64,39 @@
                     </p:submenu>
                 </p:submenu>
             </p:submenu>
-            <p:menuitem id="rm_icons" value="Font Icons" icon="icon-automatic2" outcome="service" />
+            <p:menuitem id="rm_icons" value="Font Icons" icon="icon-automatic2" outcome="createservice" />
             
             <p:submenu id="rm_docs" label="Documentation" icon="icon-receipt9">
                 <p:submenu id="rm_docs_core" label="Core CSS Docs" icon="fa fa-code">
-                    <p:menuitem id="rm_docs_1" value="Installation" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_2" value="Menus" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_3" value="Responsive Mode" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_4" value="ContainerX" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_5" value="WidX" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_6" value="Selection" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_7" value="Visibility" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_8" value="Displaying" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_9" value="Positioning" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_10" value="Underline" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_11" value="Floating" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_12" value="Overflows" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_13" value="Empty Boxes" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_14" value="Opacity" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_15" value="Text Aligning" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_16" value="Box Sizing" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_17" value="Font Size" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_18" value="Font Weights" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_19" value="Transitions" icon="fa fa-book" outcome="service" />
+                    <p:menuitem id="rm_docs_1" value="Installation" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_2" value="Menus" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_3" value="Responsive Mode" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_4" value="ContainerX" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_5" value="WidX" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_6" value="Selection" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_7" value="Visibility" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_8" value="Displaying" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_9" value="Positioning" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_10" value="Underline" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_11" value="Floating" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_12" value="Overflows" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_13" value="Empty Boxes" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_14" value="Opacity" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_15" value="Text Aligning" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_16" value="Box Sizing" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_17" value="Font Size" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_18" value="Font Weights" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_19" value="Transitions" icon="fa fa-book" outcome="createservice" />
                 </p:submenu>
                 <p:submenu id="rm_docs_layout" label="Layout CSS Docs" icon="fa fa-code">
-                    <p:menuitem id="rm_docs_20" value="Less" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_21" value="Cards" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_22" value="Text Colors" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_23" value="Background Colors" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_24" value="Borders" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_25" value="Separators" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_26" value="Effects" icon="fa fa-book" outcome="service" />
-                    <p:menuitem id="rm_docs_27" value="Roboto Font" icon="fa fa-book" outcome="service" />
+                    <p:menuitem id="rm_docs_20" value="Less" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_21" value="Cards" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_22" value="Text Colors" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_23" value="Background Colors" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_24" value="Borders" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_25" value="Separators" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_26" value="Effects" icon="fa fa-book" outcome="createservice" />
+                    <p:menuitem id="rm_docs_27" value="Roboto Font" icon="fa fa-book" outcome="createservice" />
                 </p:submenu>
             </p:submenu>
             <p:separator />
