--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -32,7 +32,7 @@
                     <div class="EmptyBox30"></div>
                     <p:selectBooleanCheckbox value="accept" itemLabel="I Accept Terms And Policies"/>
                     <div class="EmptyBox30"></div>
-                    <div class="Wid100"><p:button value="Sign In / Sign Up" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton" href="internal/service.xhtml"/></div>
+                    <div class="Wid100"><p:button value="Sign In / Sign Up" icon="fa fa-sign-in" styleClass="Wid60 Fs18 White RaisedButton" href="internal/crud/createservice.xhtml"/></div>
                     <div class="EmptyBox5"></div>
                     <div class="Wid100"><p:button value="Forgot Password ?" icon="fa fa-lock" styleClass="RedButton Wid60 Fs18 White RaisedButton"/></div>
                     <div class="EmptyBox20"></div>
@@ -42,7 +42,7 @@
                     <div class="EmptyBox20"></div>
                 </div>
                 <div class="Wid100 TexAlCenter MarTop20 Fs14 FontRobotoRegular WhiteBlue">
-                        <i class="fa fa-copyright"></i>  QA-Box RON <br/> All rights reserved.
+                        <i class="fa fa-copyright"></i>  QABox Technologies - SOA Inventory <br/> All rights reserved.
                     </div>
             </div>
         </div>
