Ultimos ajustes de menús para pruebas

--- a/WebContent/WEB-INF/profileInfo.xhtml
+++ b/WebContent/WEB-INF/profileInfo.xhtml
@@ -20,10 +20,11 @@
                 <ul>
                     <li><a href="#" class="menulink ripplelink"><i class="icon-user158 Fs16"></i> User Profile</a></li>
                     <li><a href="#" class="menulink ripplelink"><i class="icon-settings49 Fs16"></i>System Settings</a></li>
+                    <li><a href="#" class="menulink ripplelink"><i class="icon-thermostat1 Fs16"></i> Logout</a></li>
                     <li class="menulink ripplelink">
-                    	<p:commandLink styleClass="menulink ripplelink" type="submit"  value="Logout" action="#{loginController.logout}">
-                    		<i class="icon-thermostat1 Fs16"></i>
-                    	</p:commandLink>
+                    	<i class="icon-thermostat1 Fs16"></i>
+                    		<p:commandLink styleClass="menulink ripplelink" type="submit"  value="Logout" action="#{loginController.logout}"/>
+                    		
                     </li>
                 </ul>
             </li>
